# autoapply-turbo-charge-jobs

./: .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CORS_AND_FALLBACK_IMPROVEMENTS.md  CV_GENERATION_SYSTEM.md  DOCKER_OVERVIEW.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PROJECT_DEVELOPMENT_PLAN.md  README.md  REAL_JOB_SCRAPING.md  REAL_SCRAPING_ENABLED.md  SKIP_LOGIN.md  START_REAL_SCRAPING.md  add-github-columns.sql  add-n26-company.sql  add-n26-to-db.js  application_submission_agent.md  browser_use_agents_md.md  check-current-data.js  check-ports.js  check-schema.js  clean_demo_user_data.sql  cleanup-company-names.js  clear-all-data.js  clear-scholar-data.js  create-mock-user-auth.sql  create-mock-user-fixed.sql  create-mock-user.sql  create-scholar-tables.sql  debug-crawler.js  debug-line-format.js  debug-scraping-issue.js  demo-crawler.js  docker-compose.dev.yml  docker-compose.test.yml  (+26 more)
.github/: ISSUE_TEMPLATE.md
backend/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.playwright  README.md  env.example  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  start.py
backend/services/: ai_vision_scraper.py  browser_use_job_agent.py  career_discovery.py  job_scraper.py
backend/src/job_automation/: __init__.py  config.py
backend/src/job_automation/application/: __init__.py  orchestrator.py  web_search_job_service.py
backend/src/job_automation/application/add_new_agent_service/: __init__.py  service.py
backend/src/job_automation/application/add_new_tool_service/: __init__.py  service.py
backend/src/job_automation/application/career_discovery_service/: __init__.py  service.py
backend/src/job_automation/core/: __init__.py  models.py
backend/src/job_automation/prompts/: __init__.py  search_prompts.py  web_search_prompts.py
backend/tests/: test_github_integration.py  test_scholar_integration.py  test_services.py  test_supabase_integration.py
(+196 files in other folders)
