[project]
name = "job-automation-backend"
version = "2.0.0"
description = "Job Discovery and Automation System Backend"
authors = [{name = "Job Automation Team"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core API Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",  
    "pydantic==2.5.0",
    
    # OpenAI Integration
    "openai>=1.52.0",
    
    # Database Integration
    "supabase>=2.0.0",
    
    # Browser Automation (Optional)
    "playwright==1.40.0",
    
    # Web Scraping & HTTP
    "aiohttp==3.9.1",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "httpx==0.26.0",
    
    # Utilities
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_automation"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[tool.uv.sources]